syntax = "proto3";
package protobuf;
option go_package = "pb/";

service Manager {
  rpc Deploy(DeployRequest) returns (DeployResponse) {}
  rpc Destroy(DestroyRequest) returns (DestroyResponse) {}
  rpc GetDeploy(GetDeployRequest) returns (GetDeployResponse) {}
}

message Build {
  string job_id = 1;
  string job_name = 2;
  string image_name = 3;

  enum Status {
    UNKNOWN_STATUS  = 0;
    ERROR           = 1;
    LOADING         = 2;
    COMPLETED       = 3;
  }
  Status status = 4;

  message BuildStep {
    enum Step {
      UNKNOWN_STEP  = 0;
      CLONE         = 1;
      BUILD         = 2;
      PUSH          = 3;
    }

    Step step = 1;
    string error = 2;
  }
  repeated BuildStep steps = 5;
}

message Workload {
  string job_id = 1;
  string job_name = 2;
  map<string, string> envs = 3;
  string url = 4;
}

message Deploy {
  string id = 1;
  string name = 2;
  string git_repo = 3;

  Build build = 4;
  Workload workload = 5;
}

message DeployRequest {
  string git_repo = 1;
  string name = 2;
  map<string, string> envs = 3;
}

message DeployResponse {
  string deploy_id = 1;
}

message DestroyRequest {
  string deploy_id = 1;
}

message DestroyResponse {}

message GetDeployRequest {
  string deploy_id = 1;
}

message GetDeployResponse {
  Deploy deploy = 1;
}